<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment" >

    <Switch
        android:id="@+id/switch2"
        android:layout_width="144dp"
        android:layout_height="72dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="380dp"
        android:contentDescription="Ativar"
        android:minHeight="72dp"
        android:showText="true"
        android:text="Ativar"
        android:textColorHighlight="#C39074"
        android:textColorLink="#D3651B"
        android:textOff="Não"
        android:textOn="Sim"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Ativar" />

    <TextView
        android:id="@+id/text_home9"
        android:layout_width="20dp"
        android:layout_height="55dp"
        android:layout_marginStart="305dp"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="8dp"
        android:contentDescription=":"
        android:text=":"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092"
        tools:text=":" />

    <EditText
        android:id="@+id/editTextNumber7"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="330dp"
        android:layout_marginTop="305dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextNumber6"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="305dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:nextFocusDown="@id/editTextNumber7"
        android:nextFocusForward="@id/editTextNumber7"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text_home8"
        android:layout_width="20dp"
        android:layout_height="55dp"
        android:layout_marginStart="305dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="8dp"
        android:contentDescription=":"
        android:text=":"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092"
        tools:text=":" />

    <EditText
        android:id="@+id/editTextNumber5"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="330dp"
        android:layout_marginTop="210dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:nextFocusDown="@id/editTextNumber6"
        android:nextFocusForward="@id/editTextNumber6"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="210dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:nextFocusDown="@id/editTextNumber5"
        android:nextFocusForward="@id/editTextNumber5"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="135dp"
        android:layout_height="55dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="130dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:nextFocusDown="@id/editTextNumber4"
        android:nextFocusForward="@id/editTextNumber4"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="135dp"
        android:layout_height="55dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="35dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:nextFocusDown="@id/editTextNumber3"
        android:nextFocusForward="@id/editTextNumber3"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text_home7"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/quantas_vezes_ao_dia_o_seu_pet_se_alimentaa"
        android:text="@string/quantas_vezes_ao_dia_o_seu_pet_se_alimentaa"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        tools:text="@string/quantas_vezes_ao_dia_o_seu_pet_se_alimentaa" />

    <TextView
        android:id="@+id/text_home5"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/ativar_alimentador"
        android:text="@string/ativar_alimentadorr"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654"
        tools:text="Ativar Alimentador" />

    <TextView
        android:id="@+id/text_home4"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/qual_o_intervalo_entre_as_refei_es_de_seu_pet"
        android:text="@string/qual_o_intervalo_entre_as_refei_es_de_seu_pett"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508"
        tools:text="Qual o intervalo entre as refeições de seu pet?" />

    <TextView
        android:id="@+id/text_home3"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/qual_o_hor_rio_da_primeira_refei_o_de_seu_pet"
        android:text="@string/qual_o_hor_rio_da_primeira_refei_o_de_seu_pett"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353"
        tools:text="Qual o horário da primeira refeição de seu pet?" />

    <TextView
        android:id="@+id/text_home2"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/quantos_gramas_de_ra_o_ele_come_por_vez"
        android:text="@string/quantos_gramas_de_ra_o_ele_come_por_vezz"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205"
        tools:text="Quantos gramas de ração ele come por vez?" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="371dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/quantas_vezes_ao_dia_o_seu_pet_se_alimenta"
        android:text="@string/quantas_vezes_ao_dia_o_seu_pet_se_alimentaa"
        android:textAlignment="viewStart"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011"
        tools:ignore="TextContrastCheck"
        tools:text="@string/quantas_vezes_ao_dia_o_seu_pet_se_alimenta" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="500dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/salvar"
            android:textColor="#674331"
            android:textStyle="bold"
            tools:text="Salvar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/editar"
            android:textColor="#674331"
            android:textStyle="bold"
            tools:text="Editar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>